# OntoRalph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  Local_Server_UI_Implementation_Plan.md  OntoRalph_definition_loop.md  README.md  Spec_Local_PythonServer_HTML_UI.md  mkdocs.yml  ontological-definition-style-guide-v3.1.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
Recommended Tests/sparql-queries/: avoid-punning.rq  check-for-undefined-dc-elements-terms.sparql  check-for-undefined-dcterms-terms.sparql  check-for-undefined-owl-terms.sparql  check-for-undefined-rdf-terms.sparql  check-for-undefined-rdfs-terms.sparql  check-for-undefined-skos-terms.sparql  dc-elements-terms.csv  duplicate-rdfs-label.rq  owl-terms.csv  rdf-and-rdfs-terms.csv
docs/: cli-reference.md  configuration.md  index.md  installation.md  quickstart.md  tagteam.jsonld
docs/api/: index.md
ontoralph/: __init__.py  __main__.py  cli.py
ontoralph/batch/: __init__.py  consistency.py  dependency.py  processor.py  sibling.py  validator.py
ontoralph/config/: __init__.py  settings.py
ontoralph/core/: __init__.py  checklist.py  loop.py  models.py
ontoralph/llm/: __init__.py  base.py  claude.py  mock.py  openai.py  parser.py  prompts.py
ontoralph/output/: __init__.py  report.py  turtle.py
ontoralph/web/: __init__.py  batch_manager.py  models.py  server.py  session_store.py
ontoralph/web/routes/: __init__.py  batch.py  health.py  run.py  session.py  validate.py
ontoralph/web/static/: index.html
ontoralph/web/static/css/: styles.css
ontoralph/web/static/js/: api.js  storage.js
tests/: __init__.py  test_basic.py  test_batch.py  test_checklist.py  test_cli.py  test_config.py  test_golden.py  test_integration.py  test_llm.py  test_loop.py  test_output.py  test_web_api.py  test_web_models.py  test_web_session.py
tests/fixtures/: golden_definitions.yaml
