[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ontoralph"
version = "1.0.0"
description = "Iterative definition refinement for BFO/CCO ontologies using the Ralph Loop technique"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "OntoRalph Contributors" },
]
keywords = [
    "ontology",
    "bfo",
    "cco",
    "definition",
    "quality-assurance",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "rdflib>=7.0.0",
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pre-commit>=3.6.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.0",
]

[project.scripts]
ontoralph = "ontoralph.cli:main"

[project.urls]
Homepage = "https://github.com/ontoralph/ontoralph"
Documentation = "https://ontoralph.github.io/ontoralph"
Repository = "https://github.com/ontoralph/ontoralph.git"
Issues = "https://github.com/ontoralph/ontoralph/issues"

[tool.hatch.build.targets.wheel]
packages = ["ontoralph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-ra",
]

[tool.coverage.run]
source = ["ontoralph"]
branch = true
omit = [
    # Real API clients require API keys - tested via MockProvider
    "ontoralph/llm/claude.py",
    "ontoralph/llm/openai.py",
    # Entry point
    "ontoralph/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    # Protocol methods
    "\\.\\.\\.",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "anthropic.*",
    "openai.*",
    "fastapi.*",
    "uvicorn.*",
    "sse_starlette.*",
    "starlette.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["ontoralph"]
